2010-07-01 jorgeluis.zapata

	* configure.ac:
	* src/include/Enesim.h:
	* src/include/Makefile.am:
	* src/include/enesim_private.h:
	* src/include/enesim_rasterizer.h:
	* src/include/private/rasterizer.h:
	* src/lib/Makefile.am:
	* src/lib/rasterizer/Makefile.am:
	* src/lib/rasterizer/circle.c:
	* src/lib/rasterizer/cpsc.c:
	* src/lib/rasterizer/kiia.c:
	* src/lib/rasterizer/kiia.h:
	* src/lib/rasterizer/kiia16.c:
	* src/lib/rasterizer/kiia32.c:
	* src/lib/rasterizer/kiia8.c:
	Remove the rasterizer code

2010-06-29  jorgeluis.zapata

	* src/lib/renderer/hswitch.c:
	* src/lib/renderer/importer.c:
	* src/lib/renderer/perlin.c:
	* src/lib/renderer/shape/rectangle.c:
	  More documentation

2010-06-23 10:01  jorgeluis.zapata

	* src/include/Enesim.h, src/include/enesim_main.h,
	  src/include/enesim_pool.h, src/include/enesim_surface.h,
	  src/include/private/pool.h, src/include/private/renderer.h,
	  src/include/private/surface.h, src/lib/enesim_main.c,
	  src/lib/enesim_renderer.c, src/lib/enesim_surface.c,
	  src/lib/pool/enesim_eina.c, src/lib/pool/enesim_equanime.c,
	  src/lib/renderer/checker.c, src/lib/renderer/gradient/linear.c,
	  src/lib/util/enesim_matrix.c:
	  Apply pending patch. This adds the pool allocator

2010-04-10 01:46  turran

	* src/lib/converter/rgb888.c:
	  Of course, dont forget the new files

2010-04-10 01:33  turran

	* Makefile.am, configure.ac, src/include/enesim_converter.h,
	  src/include/enesim_renderer.h, src/lib/converter/Makefile.am,
	  src/lib/converter/a8.c, src/lib/converter/argb8888.c,
	  src/lib/converter/rgb565.c, src/lib/enesim_converter.c,
	  src/lib/enesim_surface.c, src/lib/renderer/checker.c,
	  src/lib/renderer/compound.c, src/lib/renderer/filter/dispmap.c,
	  src/lib/renderer/filter/raddist.c, src/lib/renderer/grid.c,
	  src/lib/renderer/importer.c, src/lib/renderer/shape/rectangle.c,
	  src/lib/renderer/stripes.c, src/lib/renderer/surface.c:
	  Don't compile the examples dir, it is going to be removed